--- a/source/style.css
+++ b/source/style.css
@@ -1,20 +1,20 @@
 /* @group Reset */
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span {
+/* http://meyerweb.com/eric/tools/css/reset/
+v2.0 | 20110126
+License:  none (public domain)
+ */
+html,body,div,span {
 	margin: 0;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+
 	-webkit-user-select: none;
 }
-/* @end */
 
+/* @end */
 body {
 	cursor: default;
 	font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
@@ -54,7 +54,7 @@ input {
 input:focus {
 	background-color: #ffffff;
 	color: #333333;
-	-moz-box-shadow: 0 0 10px rgba(238, 97, 33, 0.5);
+
 	-webkit-box-shadow: 0 0 10px rgba(238, 97, 33, 0.5);
 	box-shadow: 0 0 10px rgba(238, 97, 33, 0.5);
 }
@@ -69,15 +69,32 @@ input:focus {
 	width: 150px;
 	margin: 20px auto;
 }
+
 #save:hover {
 	background-color: #454545;
 }
+
 #save:active {
 	background-color: #000000;
 }
+
 #foot {
 	position: absolute;
 	bottom: 10px;
 	right: 10px;
 	font-size: 10px;
+}
+
+p {
+	line-height: 20px;
+	font-size: 12px;
+	color: #f15e27;
+	margin-right: 90px;
+	margin-left: 90px;
+}
+
+b {
+	display: inline-block;
+	margin-right: 10px;
+	text-transform: uppercase;
 }
